<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_main_title_modules"
        android:id="@+id/tv_main_title_modules"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_main_title_modules"
        android:text="@string/button_module_controller"
        android:onClick="startControllerModule"
        android:id="@+id/button_module_controller"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_module_controller"
        android:text="@string/button_module_craft"
        android:onClick="startCraftModule"
        android:id="@+id/button_module_craft"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_module_craft"
        android:paddingTop="8dp"
        android:text="@string/tv_main_title_concept"
        android:id="@+id/tv_main_title_concept"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_main_title_concept"
        android:text="@string/button_sensor_readings"
        android:onClick="startSensorReadings"
        android:id="@+id/button_sensor_readings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sensor_readings"
        android:text="@string/button_connectivity_test"
        android:onClick="startConnectivityTest"
        android:id="@+id/button_connectivity_test"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_connectivity_test"
        android:text="@string/button_flight_visualizer"
        android:onClick="startFlightVisualizer"
        android:id="@+id/button_flight_visualizer"/>

</RelativeLayout>
