<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_craft"
    tools:context="com.rabidllamastudios.avigate.CraftActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_relative_craft_connection">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_craft_title_connection"
            android:textSize="18sp"
            android:id="@+id/tv_craft_title_connection"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_craft_title_connection"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_connection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_connection"
                android:id="@+id/tv_craft_label_connection"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_disconnected"
                android:id="@+id/tv_craft_value_connect"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_linear_craft_connection"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_latency">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_latency"
                android:id="@+id/tv_craft_label_latency"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_latency"
                android:id="@+id/tv_craft_value_latency"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_relative_craft_connection"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_craft_orientation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/tv_craft_title_orientation"
            android:id="@+id/tv_craft_title_orientation"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_craft_title_orientation"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_pitch">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_pitch"
                android:id="@+id/tv_craft_label_pitch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_sensor"
                android:id="@+id/tv_craft_value_pitch"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_linear_craft_pitch"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_yaw">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_yaw"
                android:id="@+id/tv_craft_label_yaw"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_sensor"
                android:id="@+id/tv_craft_value_yaw"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_linear_craft_yaw"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_roll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_roll"
                android:id="@+id/tv_craft_label_roll"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_sensor"
                android:id="@+id/tv_craft_value_roll"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_relative_craft_orientation"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_craft_position">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_craft_title_position"
            android:textSize="18sp"
            android:id="@+id/tv_craft_title_position"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_craft_title_position"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_gps_coordinates">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_gps_coordinates"
                android:id="@+id/tv_craft_label_gps"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_sensor"
                android:id="@+id/tv_craft_value_gps_coordinates"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_linear_craft_gps_coordinates"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_gps_accuracy">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_gps_accuracy"
                android:id="@+id/tv_craft_label_gps_accuracy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_sensor"
                android:id="@+id/tv_craft_value_gps_accuracy"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_linear_craft_gps_accuracy"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_bearing">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_bearing"
                android:id="@+id/tv_craft_label_bearing"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_sensor"
                android:id="@+id/tv_craft_value_bearing"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_linear_craft_bearing"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_barometer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_barometer"
                android:id="@+id/tv_craft_label_barometer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_sensor"
                android:id="@+id/tv_craft_value_barometer"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_relative_craft_position"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_craft_arduino">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_craft_title_arduino"
            android:textSize="18sp"
            android:id="@+id/tv_craft_title_arduino"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_craft_title_arduino"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/layout_linear_craft_status_usb">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_arduino_status"
                android:id="@+id/tv_craft_label_motor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/tv_placeholder_disconnected"
                android:id="@+id/tv_craft_value_arduino_status"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_linear_craft_status_usb"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:id="@+id/linear_layout_craft_gps_coordinates">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_craft_label_arduino_output"
                android:id="@+id/tv_craft_label_arduino_output"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:id="@+id/tv_craft_value_arduino_output"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
