<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="14dp"
    android:id="@+id/layout_relative_arduino_calibration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_relative_arduino_calibration_aileron">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:text="@string/tv_arduino_label_aileron"
            android:id="@+id/tv_arduino_label_calibration_aileron"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="@string/tv_placeholder_calibration"
            android:id="@+id/tv_arduino_value_calibration_aileron_min"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:id="@+id/tv_arduino_value_calibration_aileron_max"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_arduino_calibration_elevator">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:text="@string/tv_arduino_label_elevator"
            android:id="@+id/tv_arduino_label_calibration_elevator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="@string/tv_placeholder_calibration"
            android:id="@+id/tv_arduino_value_calibration_elevator_min"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:id="@+id/tv_arduino_value_calibration_elevator_max"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_arduino_calibration_rudder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:text="@string/tv_arduino_label_rudder"
            android:id="@+id/tv_arduino_label_calibration_rudder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="@string/tv_placeholder_calibration"
            android:id="@+id/tv_arduino_value_calibration_rudder_min"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:id="@+id/tv_arduino_value_calibration_rudder_max"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_arduino_calibration_throttle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:text="@string/tv_arduino_label_throttle"
            android:id="@+id/tv_arduino_label_calibration_throttle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="@string/tv_placeholder_calibration"
            android:id="@+id/tv_arduino_value_calibration_throttle_min"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:id="@+id/tv_arduino_value_calibration_throttle_max"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_arduino_calibration_cutover">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:text="@string/tv_arduino_label_cutover"
            android:id="@+id/tv_arduino_label_calibration_cutover"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="@string/tv_placeholder_calibration"
            android:id="@+id/tv_arduino_value_calibration_cutover_min"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:id="@+id/tv_arduino_value_calibration_cutover_max"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/layout_relative_arduino_calibration_button">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/button_calibrate"
            android:id="@+id/button_calibrate"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>